Update Blog “2023-01-08-new-post”

--- a/content/posts/2023-01-08-new-post.md
+++ b/content/posts/2023-01-08-new-post.md
@@ -2,6 +2,7 @@
 date: 2023-01-08 12:51:18
 title: New post
 slug: new-post
+image: /assets/img/logo-small.png
 description: new-post
 tags:
   - blog
